parser.out
Grammar:

Rule 0     S' -> vectorOperation
Rule 1     vectorOperation -> vector
Rule 2     vectorOperation -> vectorOperation orOp vectorOperation
Rule 3     vectorOperation -> vectorOperation andUnlessOp vectorOperation
Rule 4     vectorOperation -> vectorOperation compareOp vectorOperation
Rule 5     vectorOperation -> vectorOperation addOp vectorOperation
Rule 6     vectorOperation -> vectorOperation multOp vectorOperation
Rule 7     vectorOperation -> unaryOp vectorOperation  [precedence=right, level=4]
Rule 8     vectorOperation -> vectorOperation powOp vectorOperation  [precedence=right, level=5]
Rule 9     unaryOp -> SUB  [precedence=left, level=2]
Rule 10    unaryOp -> ADD  [precedence=left, level=2]
Rule 11    powOp -> POW  [precedence=right, level=5]
Rule 12    powOp -> POW grouping  [precedence=right, level=5]
Rule 13    multOp -> MOD  [precedence=left, level=3]
Rule 14    multOp -> DIV  [precedence=left, level=3]
Rule 15    multOp -> MULT  [precedence=left, level=3]
Rule 16    multOp -> MOD grouping  [precedence=left, level=3]
Rule 17    multOp -> DIV grouping  [precedence=left, level=3]
Rule 18    multOp -> MULT grouping  [precedence=left, level=3]
Rule 19    addOp -> SUB  [precedence=left, level=2]
Rule 20    addOp -> ADD  [precedence=left, level=2]
Rule 21    addOp -> SUB grouping  [precedence=left, level=2]
Rule 22    addOp -> ADD grouping  [precedence=left, level=2]
Rule 23    compareOp -> compareOps
Rule 24    compareOp -> compareOps BOOL
Rule 25    compareOp -> compareOps grouping
Rule 26    compareOp -> compareOps BOOL grouping
Rule 27    compareOps -> LE  [precedence=left, level=1]
Rule 28    compareOps -> GE  [precedence=left, level=1]
Rule 29    compareOps -> LT  [precedence=left, level=1]
Rule 30    compareOps -> GT  [precedence=left, level=1]
Rule 31    compareOps -> NE  [precedence=left, level=1]
Rule 32    compareOps -> DEQ  [precedence=left, level=1]
Rule 33    andUnlessOp -> UNLESS
Rule 34    andUnlessOp -> AND  [precedence=left, level=1]
Rule 35    andUnlessOp -> UNLESS grouping
Rule 36    andUnlessOp -> AND grouping  [precedence=left, level=1]
Rule 37    orOp -> OR  [precedence=left, level=1]
Rule 38    orOp -> OR grouping  [precedence=left, level=1]
Rule 39    vector -> parens
Rule 40    vector -> literal
Rule 41    vector -> offset
Rule 42    vector -> matrixSelector
Rule 43    vector -> instantSelector
Rule 44    vector -> aggregation
Rule 45    vector -> function
Rule 46    parens -> LEFT_PAREN vectorOperation RIGHT_PAREN
Rule 47    instantSelector -> LEFT_BRACE labelMatcherList RIGHT_BRACE
Rule 48    instantSelector -> METRIC_NAME
Rule 49    instantSelector -> METRIC_NAME LEFT_BRACE RIGHT_BRACE
Rule 50    instantSelector -> METRIC_NAME LEFT_BRACE labelMatcherList RIGHT_BRACE
Rule 51    labelMatcher -> labelName NRE STRING
Rule 52    labelMatcher -> labelName RE STRING
Rule 53    labelMatcher -> labelName NE STRING
Rule 54    labelMatcher -> labelName EQ STRING
Rule 55    labelMatcherList -> labelMatcher
Rule 56    labelMatcherList -> labelMatcher COMMA labelMatcherList
Rule 57    matrixSelector -> instantSelector TIME_RANGE
Rule 58    offset -> matrixSelector OFFSET DURATION
Rule 59    offset -> instantSelector OFFSET DURATION
Rule 60    function -> FUNCTION parameterList
Rule 61    parameter -> vectorOperation
Rule 62    parameter -> literal
Rule 63    parameterList2 -> parameter
Rule 64    parameterList2 -> parameter COMMA parameterList2
Rule 65    parameterList -> LEFT_PAREN parameterList2 RIGHT_PAREN
Rule 66    aggregation -> AGGREGATION_OPERATOR parameterList WITHOUT labelNameList
Rule 67    aggregation -> AGGREGATION_OPERATOR parameterList BY labelNameList
Rule 68    aggregation -> AGGREGATION_OPERATOR WITHOUT labelNameList parameterList
Rule 69    aggregation -> AGGREGATION_OPERATOR BY labelNameList parameterList
Rule 70    aggregation -> AGGREGATION_OPERATOR parameterList
Rule 71    grouping -> ignoring
Rule 72    grouping -> on
Rule 73    grouping -> ignoring groupRight
Rule 74    grouping -> ignoring groupLeft
Rule 75    grouping -> on groupRight
Rule 76    grouping -> on groupLeft
Rule 77    on -> ON labelNameList
Rule 78    ignoring -> IGNORING labelNameList
Rule 79    groupLeft -> GROUP_LEFT labelNameList
Rule 80    groupRight -> GROUP_RIGHT labelNameList
Rule 81    labelName -> LABEL_NAME
Rule 82    labelName -> METRIC_NAME
Rule 83    labelName -> keyword
Rule 84    labelNameList2 -> labelName
Rule 85    labelNameList2 -> labelName COMMA labelNameList2
Rule 86    labelNameList -> LEFT_PAREN labelNameList2 RIGHT_PAREN
Rule 87    keyword -> FUNCTION
Rule 88    keyword -> AGGREGATION_OPERATOR
Rule 89    keyword -> BOOL
Rule 90    keyword -> OFFSET
Rule 91    keyword -> GROUP_RIGHT
Rule 92    keyword -> GROUP_LEFT
Rule 93    keyword -> IGNORING
Rule 94    keyword -> ON
Rule 95    keyword -> WITHOUT
Rule 96    keyword -> BY
Rule 97    keyword -> UNLESS
Rule 98    keyword -> OR  [precedence=left, level=1]
Rule 99    keyword -> AND  [precedence=left, level=1]
Rule 100   literal -> STRING
Rule 101   literal -> NUMBER

Unused terminals:

    UMINUS

Terminals, with rules where they appear:

ADD                  : 10 20 22
AGGREGATION_OPERATOR : 66 67 68 69 70 88
AND                  : 34 36 99
BOOL                 : 24 26 89
BY                   : 67 69 96
COMMA                : 56 64 85
DEQ                  : 32
DIV                  : 14 17
DURATION             : 58 59
EQ                   : 54
FUNCTION             : 60 87
GE                   : 28
GROUP_LEFT           : 79 92
GROUP_RIGHT          : 80 91
GT                   : 30
IGNORING             : 78 93
LABEL_NAME           : 81
LE                   : 27
LEFT_BRACE           : 47 49 50
LEFT_PAREN           : 46 65 86
LT                   : 29
METRIC_NAME          : 48 49 50 82
MOD                  : 13 16
MULT                 : 15 18
NE                   : 31 53
NRE                  : 51
NUMBER               : 101
OFFSET               : 58 59 90
ON                   : 77 94
OR                   : 37 38 98
POW                  : 11 12
RE                   : 52
RIGHT_BRACE          : 47 49 50
RIGHT_PAREN          : 46 65 86
STRING               : 51 52 53 54 100
SUB                  : 9 19 21
TIME_RANGE           : 57
UMINUS               : 
UNLESS               : 33 35 97
WITHOUT              : 66 68 95
error                : 

Nonterminals, with rules where they appear:

addOp                : 5
aggregation          : 44
andUnlessOp          : 3
compareOp            : 4
compareOps           : 23 24 25 26
function             : 45
groupLeft            : 74 76
groupRight           : 73 75
grouping             : 12 16 17 18 21 22 25 26 35 36 38
ignoring             : 71 73 74
instantSelector      : 43 57 59
keyword              : 83
labelMatcher         : 55 56
labelMatcherList     : 47 50 56
labelName            : 51 52 53 54 84 85
labelNameList        : 66 67 68 69 77 78 79 80
labelNameList2       : 85 86
literal              : 40 62
matrixSelector       : 42 58
multOp               : 6
offset               : 41
on                   : 72 75 76
orOp                 : 2
parameter            : 63 64
parameterList        : 60 66 67 68 69 70
parameterList2       : 64 65
parens               : 39
powOp                : 8
unaryOp              : 7
vector               : 1
vectorOperation      : 2 2 3 3 4 4 5 5 6 6 7 8 8 46 61 0


state 0

    (0) S' -> . vectorOperation
    (1) vectorOperation -> . vector
    (2) vectorOperation -> . vectorOperation orOp vectorOperation
    (3) vectorOperation -> . vectorOperation andUnlessOp vectorOperation
    (4) vectorOperation -> . vectorOperation compareOp vectorOperation
    (5) vectorOperation -> . vectorOperation addOp vectorOperation
    (6) vectorOperation -> . vectorOperation multOp vectorOperation
    (7) vectorOperation -> . unaryOp vectorOperation
    (8) vectorOperation -> . vectorOperation powOp vectorOperation
    (39) vector -> . parens
    (40) vector -> . literal
    (41) vector -> . offset
    (42) vector -> . matrixSelector
    (43) vector -> . instantSelector
    (44) vector -> . aggregation
    (45) vector -> . function
    (9) unaryOp -> . SUB
    (10) unaryOp -> . ADD
    (46) parens -> . LEFT_PAREN vectorOperation RIGHT_PAREN
    (100) literal -> . STRING
    (101) literal -> . NUMBER
    (58) offset -> . matrixSelector OFFSET DURATION
    (59) offset -> . instantSelector OFFSET DURATION
    (57) matrixSelector -> . instantSelector TIME_RANGE
    (47) instantSelector -> . LEFT_BRACE labelMatcherList RIGHT_BRACE
    (48) instantSelector -> . METRIC_NAME
    (49) instantSelector -> . METRIC_NAME LEFT_BRACE RIGHT_BRACE
    (50) instantSelector -> . METRIC_NAME LEFT_BRACE labelMatcherList RIGHT_BRACE
    (66) aggregation -> . AGGREGATION_OPERATOR parameterList WITHOUT labelNameList
    (67) aggregation -> . AGGREGATION_OPERATOR parameterList BY labelNameList
    (68) aggregation -> . AGGREGATION_OPERATOR WITHOUT labelNameList parameterList
    (69) aggregation -> . AGGREGATION_OPERATOR BY labelNameList parameterList
    (70) aggregation -> . AGGREGATION_OPERATOR parameterList
    (60) function -> . FUNCTION parameterList
    SUB             shift and go to state 11
    ADD             shift and go to state 12
    LEFT_PAREN      shift and go to state 13
    STRING          shift and go to state 14
    NUMBER          shift and go to state 15
    LEFT_BRACE      shift and go to state 16
    METRIC_NAME     shift and go to state 17
    AGGREGATION_OPERATOR shift and go to state 18
    FUNCTION        shift and go to state 19

    vectorOperation                shift and go to state 1
    vector                         shift and go to state 2
    unaryOp                        shift and go to state 3
    parens                         shift and go to state 4
    literal                        shift and go to state 5
    offset                         shift and go to state 6
    matrixSelector                 shift and go to state 7
    instantSelector                shift and go to state 8
    aggregation                    shift and go to state 9
    function                       shift and go to state 10

state 1

    (0) S' -> vectorOperation .
    (2) vectorOperation -> vectorOperation . orOp vectorOperation
    (3) vectorOperation -> vectorOperation . andUnlessOp vectorOperation
    (4) vectorOperation -> vectorOperation . compareOp vectorOperation
    (5) vectorOperation -> vectorOperation . addOp vectorOperation
    (6) vectorOperation -> vectorOperation . multOp vectorOperation
    (8) vectorOperation -> vectorOperation . powOp vectorOperation
    (37) orOp -> . OR
    (38) orOp -> . OR grouping
    (33) andUnlessOp -> . UNLESS
    (34) andUnlessOp -> . AND
    (35) andUnlessOp -> . UNLESS grouping
    (36) andUnlessOp -> . AND grouping
    (23) compareOp -> . compareOps
    (24) compareOp -> . compareOps BOOL
    (25) compareOp -> . compareOps grouping
    (26) compareOp -> . compareOps BOOL grouping
    (19) addOp -> . SUB
    (20) addOp -> . ADD
    (21) addOp -> . SUB grouping
    (22) addOp -> . ADD grouping
    (13) multOp -> . MOD
    (14) multOp -> . DIV
    (15) multOp -> . MULT
    (16) multOp -> . MOD grouping
    (17) multOp -> . DIV grouping
    (18) multOp -> . MULT grouping
    (11) powOp -> . POW
    (12) powOp -> . POW grouping
    (27) compareOps -> . LE
    (28) compareOps -> . GE
    (29) compareOps -> . LT
    (30) compareOps -> . GT
    (31) compareOps -> . NE
    (32) compareOps -> . DEQ
    OR              shift and go to state 26
    UNLESS          shift and go to state 27
    AND             shift and go to state 28
    SUB             shift and go to state 30
    ADD             shift and go to state 31
    MOD             shift and go to state 32
    DIV             shift and go to state 33
    MULT            shift and go to state 34
    POW             shift and go to state 35
    LE              shift and go to state 36
    GE              shift and go to state 37
    LT              shift and go to state 38
    GT              shift and go to state 39
    NE              shift and go to state 40
    DEQ             shift and go to state 41

    orOp                           shift and go to state 20
    andUnlessOp                    shift and go to state 21
    compareOp                      shift and go to state 22
    addOp                          shift and go to state 23
    multOp                         shift and go to state 24
    powOp                          shift and go to state 25
    compareOps                     shift and go to state 29

state 2

    (1) vectorOperation -> vector .
    OR              reduce using rule 1 (vectorOperation -> vector .)
    UNLESS          reduce using rule 1 (vectorOperation -> vector .)
    AND             reduce using rule 1 (vectorOperation -> vector .)
    SUB             reduce using rule 1 (vectorOperation -> vector .)
    ADD             reduce using rule 1 (vectorOperation -> vector .)
    MOD             reduce using rule 1 (vectorOperation -> vector .)
    DIV             reduce using rule 1 (vectorOperation -> vector .)
    MULT            reduce using rule 1 (vectorOperation -> vector .)
    POW             reduce using rule 1 (vectorOperation -> vector .)
    LE              reduce using rule 1 (vectorOperation -> vector .)
    GE              reduce using rule 1 (vectorOperation -> vector .)
    LT              reduce using rule 1 (vectorOperation -> vector .)
    GT              reduce using rule 1 (vectorOperation -> vector .)
    NE              reduce using rule 1 (vectorOperation -> vector .)
    DEQ             reduce using rule 1 (vectorOperation -> vector .)
    $end            reduce using rule 1 (vectorOperation -> vector .)
    RIGHT_PAREN     reduce using rule 1 (vectorOperation -> vector .)
    COMMA           reduce using rule 1 (vectorOperation -> vector .)


state 3

    (7) vectorOperation -> unaryOp . vectorOperation
    (1) vectorOperation -> . vector
    (2) vectorOperation -> . vectorOperation orOp vectorOperation
    (3) vectorOperation -> . vectorOperation andUnlessOp vectorOperation
    (4) vectorOperation -> . vectorOperation compareOp vectorOperation
    (5) vectorOperation -> . vectorOperation addOp vectorOperation
    (6) vectorOperation -> . vectorOperation multOp vectorOperation
    (7) vectorOperation -> . unaryOp vectorOperation
    (8) vectorOperation -> . vectorOperation powOp vectorOperation
    (39) vector -> . parens
    (40) vector -> . literal
    (41) vector -> . offset
    (42) vector -> . matrixSelector
    (43) vector -> . instantSelector
    (44) vector -> . aggregation
    (45) vector -> . function
    (9) unaryOp -> . SUB
    (10) unaryOp -> . ADD
    (46) parens -> . LEFT_PAREN vectorOperation RIGHT_PAREN
    (100) literal -> . STRING
    (101) literal -> . NUMBER
    (58) offset -> . matrixSelector OFFSET DURATION
    (59) offset -> . instantSelector OFFSET DURATION
    (57) matrixSelector -> . instantSelector TIME_RANGE
    (47) instantSelector -> . LEFT_BRACE labelMatcherList RIGHT_BRACE
    (48) instantSelector -> . METRIC_NAME
    (49) instantSelector -> . METRIC_NAME LEFT_BRACE RIGHT_BRACE
    (50) instantSelector -> . METRIC_NAME LEFT_BRACE labelMatcherList RIGHT_BRACE
    (66) aggregation -> . AGGREGATION_OPERATOR parameterList WITHOUT labelNameList
    (67) aggregation -> . AGGREGATION_OPERATOR parameterList BY labelNameList
    (68) aggregation -> . AGGREGATION_OPERATOR WITHOUT labelNameList parameterList
    (69) aggregation -> . AGGREGATION_OPERATOR BY labelNameList parameterList
    (70) aggregation -> . AGGREGATION_OPERATOR parameterList
    (60) function -> . FUNCTION parameterList
    SUB             shift and go to state 11
    ADD             shift and go to state 12
    LEFT_PAREN      shift and go to state 13
    STRING          shift and go to state 14
    NUMBER          shift and go to state 15
    LEFT_BRACE      shift and go to state 16
    METRIC_NAME     shift and go to state 17
    AGGREGATION_OPERATOR shift and go to state 18
    FUNCTION        shift and go to state 19

    unaryOp                        shift and go to state 3
    vectorOperation                shift and go to state 42
    vector                         shift and go to state 2
    parens                         shift and go to state 4
    literal                        shift and go to state 5
    offset                         shift and go to state 6
    matrixSelector                 shift and go to state 7
    instantSelector                shift and go to state 8
    aggregation                    shift and go to state 9
    function                       shift and go to state 10

state 4

    (39) vector -> parens .
    OR              reduce using rule 39 (vector -> parens .)
    UNLESS          reduce using rule 39 (vector -> parens .)
    AND             reduce using rule 39 (vector -> parens .)
    SUB             reduce using rule 39 (vector -> parens .)
    ADD             reduce using rule 39 (vector -> parens .)
    MOD             reduce using rule 39 (vector -> parens .)
    DIV             reduce using rule 39 (vector -> parens .)
    MULT            reduce using rule 39 (vector -> parens .)
    POW             reduce using rule 39 (vector -> parens .)
    LE              reduce using rule 39 (vector -> parens .)
    GE              reduce using rule 39 (vector -> parens .)
    LT              reduce using rule 39 (vector -> parens .)
    GT              reduce using rule 39 (vector -> parens .)
    NE              reduce using rule 39 (vector -> parens .)
    DEQ             reduce using rule 39 (vector -> parens .)
    $end            reduce using rule 39 (vector -> parens .)
    RIGHT_PAREN     reduce using rule 39 (vector -> parens .)
    COMMA           reduce using rule 39 (vector -> parens .)


state 5

    (40) vector -> literal .
    OR              reduce using rule 40 (vector -> literal .)
    UNLESS          reduce using rule 40 (vector -> literal .)
    AND             reduce using rule 40 (vector -> literal .)
    SUB             reduce using rule 40 (vector -> literal .)
    ADD             reduce using rule 40 (vector -> literal .)
    MOD             reduce using rule 40 (vector -> literal .)
    DIV             reduce using rule 40 (vector -> literal .)
    MULT            reduce using rule 40 (vector -> literal .)
    POW             reduce using rule 40 (vector -> literal .)
    LE              reduce using rule 40 (vector -> literal .)
    GE              reduce using rule 40 (vector -> literal .)
    LT              reduce using rule 40 (vector -> literal .)
    GT              reduce using rule 40 (vector -> literal .)
    NE              reduce using rule 40 (vector -> literal .)
    DEQ             reduce using rule 40 (vector -> literal .)
    $end            reduce using rule 40 (vector -> literal .)
    RIGHT_PAREN     reduce using rule 40 (vector -> literal .)
    COMMA           reduce using rule 40 (vector -> literal .)


state 6

    (41) vector -> offset .
    OR              reduce using rule 41 (vector -> offset .)
    UNLESS          reduce using rule 41 (vector -> offset .)
    AND             reduce using rule 41 (vector -> offset .)
    SUB             reduce using rule 41 (vector -> offset .)
    ADD             reduce using rule 41 (vector -> offset .)
    MOD             reduce using rule 41 (vector -> offset .)
    DIV             reduce using rule 41 (vector -> offset .)
    MULT            reduce using rule 41 (vector -> offset .)
    POW             reduce using rule 41 (vector -> offset .)
    LE              reduce using rule 41 (vector -> offset .)
    GE              reduce using rule 41 (vector -> offset .)
    LT              reduce using rule 41 (vector -> offset .)
    GT              reduce using rule 41 (vector -> offset .)
    NE              reduce using rule 41 (vector -> offset .)
    DEQ             reduce using rule 41 (vector -> offset .)
    $end            reduce using rule 41 (vector -> offset .)
    RIGHT_PAREN     reduce using rule 41 (vector -> offset .)
    COMMA           reduce using rule 41 (vector -> offset .)


state 7

    (42) vector -> matrixSelector .
    (58) offset -> matrixSelector . OFFSET DURATION
    OR              reduce using rule 42 (vector -> matrixSelector .)
    UNLESS          reduce using rule 42 (vector -> matrixSelector .)
    AND             reduce using rule 42 (vector -> matrixSelector .)
    SUB             reduce using rule 42 (vector -> matrixSelector .)
    ADD             reduce using rule 42 (vector -> matrixSelector .)
    MOD             reduce using rule 42 (vector -> matrixSelector .)
    DIV             reduce using rule 42 (vector -> matrixSelector .)
    MULT            reduce using rule 42 (vector -> matrixSelector .)
    POW             reduce using rule 42 (vector -> matrixSelector .)
    LE              reduce using rule 42 (vector -> matrixSelector .)
    GE              reduce using rule 42 (vector -> matrixSelector .)
    LT              reduce using rule 42 (vector -> matrixSelector .)
    GT              reduce using rule 42 (vector -> matrixSelector .)
    NE              reduce using rule 42 (vector -> matrixSelector .)
    DEQ             reduce using rule 42 (vector -> matrixSelector .)
    $end            reduce using rule 42 (vector -> matrixSelector .)
    RIGHT_PAREN     reduce using rule 42 (vector -> matrixSelector .)
    COMMA           reduce using rule 42 (vector -> matrixSelector .)
    OFFSET          shift and go to state 43


state 8

    (43) vector -> instantSelector .
    (59) offset -> instantSelector . OFFSET DURATION
    (57) matrixSelector -> instantSelector . TIME_RANGE
    OR              reduce using rule 43 (vector -> instantSelector .)
    UNLESS          reduce using rule 43 (vector -> instantSelector .)
    AND             reduce using rule 43 (vector -> instantSelector .)
    SUB             reduce using rule 43 (vector -> instantSelector .)
    ADD             reduce using rule 43 (vector -> instantSelector .)
    MOD             reduce using rule 43 (vector -> instantSelector .)
    DIV             reduce using rule 43 (vector -> instantSelector .)
    MULT            reduce using rule 43 (vector -> instantSelector .)
    POW             reduce using rule 43 (vector -> instantSelector .)
    LE              reduce using rule 43 (vector -> instantSelector .)
    GE              reduce using rule 43 (vector -> instantSelector .)
    LT              reduce using rule 43 (vector -> instantSelector .)
    GT              reduce using rule 43 (vector -> instantSelector .)
    NE              reduce using rule 43 (vector -> instantSelector .)
    DEQ             reduce using rule 43 (vector -> instantSelector .)
    $end            reduce using rule 43 (vector -> instantSelector .)
    RIGHT_PAREN     reduce using rule 43 (vector -> instantSelector .)
    COMMA           reduce using rule 43 (vector -> instantSelector .)
    OFFSET          shift and go to state 44
    TIME_RANGE      shift and go to state 45


state 9

    (44) vector -> aggregation .
    OR              reduce using rule 44 (vector -> aggregation .)
    UNLESS          reduce using rule 44 (vector -> aggregation .)
    AND             reduce using rule 44 (vector -> aggregation .)
    SUB             reduce using rule 44 (vector -> aggregation .)
    ADD             reduce using rule 44 (vector -> aggregation .)
    MOD             reduce using rule 44 (vector -> aggregation .)
    DIV             reduce using rule 44 (vector -> aggregation .)
    MULT            reduce using rule 44 (vector -> aggregation .)
    POW             reduce using rule 44 (vector -> aggregation .)
    LE              reduce using rule 44 (vector -> aggregation .)
    GE              reduce using rule 44 (vector -> aggregation .)
    LT              reduce using rule 44 (vector -> aggregation .)
    GT              reduce using rule 44 (vector -> aggregation .)
    NE              reduce using rule 44 (vector -> aggregation .)
    DEQ             reduce using rule 44 (vector -> aggregation .)
    $end            reduce using rule 44 (vector -> aggregation .)
    RIGHT_PAREN     reduce using rule 44 (vector -> aggregation .)
    COMMA           reduce using rule 44 (vector -> aggregation .)


state 10

    (45) vector -> function .
    OR              reduce using rule 45 (vector -> function .)
    UNLESS          reduce using rule 45 (vector -> function .)
    AND             reduce using rule 45 (vector -> function .)
    SUB             reduce using rule 45 (vector -> function .)
    ADD             reduce using rule 45 (vector -> function .)
    MOD             reduce using rule 45 (vector -> function .)
    DIV             reduce using rule 45 (vector -> function .)
    MULT            reduce using rule 45 (vector -> function .)
    POW             reduce using rule 45 (vector -> function .)
    LE              reduce using rule 45 (vector -> function .)
    GE              reduce using rule 45 (vector -> function .)
    LT              reduce using rule 45 (vector -> function .)
    GT              reduce using rule 45 (vector -> function .)
    NE              reduce using rule 45 (vector -> function .)
    DEQ             reduce using rule 45 (vector -> function .)
    $end            reduce using rule 45 (vector -> function .)
    RIGHT_PAREN     reduce using rule 45 (vector -> function .)
    COMMA           reduce using rule 45 (vector -> function .)


state 11

    (9) unaryOp -> SUB .
    SUB             reduce using rule 9 (unaryOp -> SUB .)
    ADD             reduce using rule 9 (unaryOp -> SUB .)
    LEFT_PAREN      reduce using rule 9 (unaryOp -> SUB .)
    STRING          reduce using rule 9 (unaryOp -> SUB .)
    NUMBER          reduce using rule 9 (unaryOp -> SUB .)
    LEFT_BRACE      reduce using rule 9 (unaryOp -> SUB .)
    METRIC_NAME     reduce using rule 9 (unaryOp -> SUB .)
    AGGREGATION_OPERATOR reduce using rule 9 (unaryOp -> SUB .)
    FUNCTION        reduce using rule 9 (unaryOp -> SUB .)


state 12

    (10) unaryOp -> ADD .
    SUB             reduce using rule 10 (unaryOp -> ADD .)
    ADD             reduce using rule 10 (unaryOp -> ADD .)
    LEFT_PAREN      reduce using rule 10 (unaryOp -> ADD .)
    STRING          reduce using rule 10 (unaryOp -> ADD .)
    NUMBER          reduce using rule 10 (unaryOp -> ADD .)
    LEFT_BRACE      reduce using rule 10 (unaryOp -> ADD .)
    METRIC_NAME     reduce using rule 10 (unaryOp -> ADD .)
    AGGREGATION_OPERATOR reduce using rule 10 (unaryOp -> ADD .)
    FUNCTION        reduce using rule 10 (unaryOp -> ADD .)


state 13

    (46) parens -> LEFT_PAREN . vectorOperation RIGHT_PAREN
    (1) vectorOperation -> . vector
    (2) vectorOperation -> . vectorOperation orOp vectorOperation
    (3) vectorOperation -> . vectorOperation andUnlessOp vectorOperation
    (4) vectorOperation -> . vectorOperation compareOp vectorOperation
    (5) vectorOperation -> . vectorOperation addOp vectorOperation
    (6) vectorOperation -> . vectorOperation multOp vectorOperation
    (7) vectorOperation -> . unaryOp vectorOperation
    (8) vectorOperation -> . vectorOperation powOp vectorOperation
    (39) vector -> . parens
    (40) vector -> . literal
    (41) vector -> . offset
    (42) vector -> . matrixSelector
    (43) vector -> . instantSelector
    (44) vector -> . aggregation
    (45) vector -> . function
    (9) unaryOp -> . SUB
    (10) unaryOp -> . ADD
    (46) parens -> . LEFT_PAREN vectorOperation RIGHT_PAREN
    (100) literal -> . STRING
    (101) literal -> . NUMBER
    (58) offset -> . matrixSelector OFFSET DURATION
    (59) offset -> . instantSelector OFFSET DURATION
    (57) matrixSelector -> . instantSelector TIME_RANGE
    (47) instantSelector -> . LEFT_BRACE labelMatcherList RIGHT_BRACE
    (48) instantSelector -> . METRIC_NAME
    (49) instantSelector -> . METRIC_NAME LEFT_BRACE RIGHT_BRACE
    (50) instantSelector -> . METRIC_NAME LEFT_BRACE labelMatcherList RIGHT_BRACE
    (66) aggregation -> . AGGREGATION_OPERATOR parameterList WITHOUT labelNameList
    (67) aggregation -> . AGGREGATION_OPERATOR parameterList BY labelNameList
    (68) aggregation -> . AGGREGATION_OPERATOR WITHOUT labelNameList parameterList
    (69) aggregation -> . AGGREGATION_OPERATOR BY labelNameList parameterList
    (70) aggregation -> . AGGREGATION_OPERATOR parameterList
    (60) function -> . FUNCTION parameterList
    SUB             shift and go to state 11
    ADD             shift and go to state 12
    LEFT_PAREN      shift and go to state 13
    STRING          shift and go to state 14
    NUMBER          shift and go to state 15
    LEFT_BRACE      shift and go to state 16
    METRIC_NAME     shift and go to state 17
    AGGREGATION_OPERATOR shift and go to state 18
    FUNCTION        shift and go to state 19

    vectorOperation                shift and go to state 46
    vector                         shift and go to state 2
    unaryOp                        shift and go to state 3
    parens                         shift and go to state 4
    literal                        shift and go to state 5
    offset                         shift and go to state 6
    matrixSelector                 shift and go to state 7
    instantSelector                shift and go to state 8
    aggregation                    shift and go to state 9
    function                       shift and go to state 10

state 14

    (100) literal -> STRING .
    OR              reduce using rule 100 (literal -> STRING .)
    UNLESS          reduce using rule 100 (literal -> STRING .)
    AND             reduce using rule 100 (literal -> STRING .)
    SUB             reduce using rule 100 (literal -> STRING .)
    ADD             reduce using rule 100 (literal -> STRING .)
    MOD             reduce using rule 100 (literal -> STRING .)
    DIV             reduce using rule 100 (literal -> STRING .)
    MULT            reduce using rule 100 (literal -> STRING .)
    POW             reduce using rule 100 (literal -> STRING .)
    LE              reduce using rule 100 (literal -> STRING .)
    GE              reduce using rule 100 (literal -> STRING .)
    LT              reduce using rule 100 (literal -> STRING .)
    GT              reduce using rule 100 (literal -> STRING .)
    NE              reduce using rule 100 (literal -> STRING .)
    DEQ             reduce using rule 100 (literal -> STRING .)
    $end            reduce using rule 100 (literal -> STRING .)
    RIGHT_PAREN     reduce using rule 100 (literal -> STRING .)
    COMMA           reduce using rule 100 (literal -> STRING .)


state 15

    (101) literal -> NUMBER .
    OR              reduce using rule 101 (literal -> NUMBER .)
    UNLESS          reduce using rule 101 (literal -> NUMBER .)
    AND             reduce using rule 101 (literal -> NUMBER .)
    SUB             reduce using rule 101 (literal -> NUMBER .)
    ADD             reduce using rule 101 (literal -> NUMBER .)
    MOD             reduce using rule 101 (literal -> NUMBER .)
    DIV             reduce using rule 101 (literal -> NUMBER .)
    MULT            reduce using rule 101 (literal -> NUMBER .)
    POW             reduce using rule 101 (literal -> NUMBER .)
    LE              reduce using rule 101 (literal -> NUMBER .)
    GE              reduce using rule 101 (literal -> NUMBER .)
    LT              reduce using rule 101 (literal -> NUMBER .)
    GT              reduce using rule 101 (literal -> NUMBER .)
    NE              reduce using rule 101 (literal -> NUMBER .)
    DEQ             reduce using rule 101 (literal -> NUMBER .)
    $end            reduce using rule 101 (literal -> NUMBER .)
    RIGHT_PAREN     reduce using rule 101 (literal -> NUMBER .)
    COMMA           reduce using rule 101 (literal -> NUMBER .)


state 16

    (47) instantSelector -> LEFT_BRACE . labelMatcherList RIGHT_BRACE
    (55) labelMatcherList -> . labelMatcher
    (56) labelMatcherList -> . labelMatcher COMMA labelMatcherList
    (51) labelMatcher -> . labelName NRE STRING
    (52) labelMatcher -> . labelName RE STRING
    (53) labelMatcher -> . labelName NE STRING
    (54) labelMatcher -> . labelName EQ STRING
    (81) labelName -> . LABEL_NAME
    (82) labelName -> . METRIC_NAME
    (83) labelName -> . keyword
    (87) keyword -> . FUNCTION
    (88) keyword -> . AGGREGATION_OPERATOR
    (89) keyword -> . BOOL
    (90) keyword -> . OFFSET
    (91) keyword -> . GROUP_RIGHT
    (92) keyword -> . GROUP_LEFT
    (93) keyword -> . IGNORING
    (94) keyword -> . ON
    (95) keyword -> . WITHOUT
    (96) keyword -> . BY
    (97) keyword -> . UNLESS
    (98) keyword -> . OR
    (99) keyword -> . AND
    LABEL_NAME      shift and go to state 50
    METRIC_NAME     shift and go to state 51
    FUNCTION        shift and go to state 53
    AGGREGATION_OPERATOR shift and go to state 54
    BOOL            shift and go to state 55
    OFFSET          shift and go to state 56
    GROUP_RIGHT     shift and go to state 57
    GROUP_LEFT      shift and go to state 58
    IGNORING        shift and go to state 59
    ON              shift and go to state 60
    WITHOUT         shift and go to state 61
    BY              shift and go to state 62
    UNLESS          shift and go to state 63
    OR              shift and go to state 64
    AND             shift and go to state 65

    labelMatcherList               shift and go to state 47
    labelMatcher                   shift and go to state 48
    labelName                      shift and go to state 49
    keyword                        shift and go to state 52

state 17
